# ChangeLog for dev-util/netbeans
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  30 Mar 2007; Miroslav Šulc <fordfrog@gentoo.org>
  +netbeans-6.0_alpha8.ebuild:
  Version bump, not working yet

  16 Mar 2007; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-6.0_alpha7.ebuild:
  Added dep on proguard + corrected js173 link path

  04 Mar 2007; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-6.0_alpha7.ebuild:
  Changed dependency from javahelp-bin to javahelp

  25 Feb 2007; Miroslav Šulc <fordfrog@gentoo.org>
  +netbeans-6.0_alpha7.ebuild, -netbeans-6.0_alpha20061023.ebuild,
  -netbeans-6.0_alpha20061109.ebuild,
  -files/6.0/netbeans-6.0_alpha20061023-gentoo.patch,
  files/6.0/startscript.sh, -files/emptyunscramble.xsl:
  Milestone 7 ebuild

  21 Jan 2007; Miroslav Šulc <fordfrog@gentoo.org> -files/5.5-r2,
  -netbeans-5.5-r2.ebuild,
  -files/5.5-r2/jdbcstorage-build.xml-comments.patch,
  -files/5.5-r2/mdrant-build.xml-comments.patch,
  -files/5.5-r2/startscript.sh:
  netbeans-5.5-r2 moved to tree

  20 Jan 2007; Miroslav Šulc <fordfrog@gentoo.org> +files/5.5-r2,
  +netbeans-5.5-r2.ebuild,
  +files/5.5-r2/jdbcstorage-build.xml-comments.patch,
  +files/5.5-r2/mdrant-build.xml-comments.patch,
  +files/5.5-r2/startscript.sh:
  Updated netbeans-5.5 ebuild, cannot go into tree atm because of unsatisfied
  deps and archs

  05 Dec 2006; William L. Thomson Jr. <wltjr@gentoo.org> ChangeLog:
  Removed all 5.5.x stuff. It's in pretty good shape now and in portage.

  03 Dec 2006; Miroslav Šulc <miroslav.sulc@startnet.cz> ChangeLog:
  improved ant configuration part of config script - now it works even if the
  target dir doesn't exist

  22 Nov 2006; Miroslav Šulc <miroslav.sulc@startnet.cz> ChangeLog:
  Enhanced Netbeans configuration script so it can now auto-configure Netbeans
  for Tomcat 5.5 and JBoss 4 servers

  12 Nov 2006; Miroslav Šulc <miroslav.sulc@startnet.cz> ChangeLog: