@@ -16,14 +16,14 @@ EBUILD netbeans-6.0_alpha7.ebuild 25032 RMD160 b3e26a42845fb802c28e0d5f98282ea48
 MD5 f9f92cc77fe077e55e0fb79c819c472f netbeans-6.0_alpha7.ebuild 25032
 RMD160 b3e26a42845fb802c28e0d5f98282ea48be22b58 netbeans-6.0_alpha7.ebuild 25032
 SHA256 953ddd9ee883409cfa946bc9c1661d7018fc9f615c1939eb1863297d1a979e0e netbeans-6.0_alpha7.ebuild 25032
-EBUILD netbeans-6.0_alpha8.ebuild 27412 RMD160 135b1b166598c3337554471e51fe29f5fb4180c4 SHA1 4e471d7aef946e3919510a0ab79945fe2ab08c5b SHA256 099ae2665af0f69f3c897c762d6341c9dfe32ab35245ab0a27e3634a6e56bf1c
-MD5 4f3cf279916dff6cfe04eef1324046e6 netbeans-6.0_alpha8.ebuild 27412
-RMD160 135b1b166598c3337554471e51fe29f5fb4180c4 netbeans-6.0_alpha8.ebuild 27412
-SHA256 099ae2665af0f69f3c897c762d6341c9dfe32ab35245ab0a27e3634a6e56bf1c netbeans-6.0_alpha8.ebuild 27412
-MISC ChangeLog 8439 RMD160 24bf8bbcf3a6364a4f7be0c575205cb9017c9321 SHA1 18029f751933b48b7d72ac7a4bd4e39089db5828 SHA256 5cc67314f34bd308fc178c224ef935abb261bfc079b2ab51444a2b8ae372d23d
-MD5 6c9fbf8efb39e3084db7c86e9ed62dc0 ChangeLog 8439
-RMD160 24bf8bbcf3a6364a4f7be0c575205cb9017c9321 ChangeLog 8439
-SHA256 5cc67314f34bd308fc178c224ef935abb261bfc079b2ab51444a2b8ae372d23d ChangeLog 8439
+EBUILD netbeans-6.0_alpha8.ebuild 27370 RMD160 2d6b11cd8c1faa2dda1052e1ff6370a8d759d9e3 SHA1 cbbc543655219c6a56de952ce0776d399992ed5b SHA256 14675bf73ec85888b921cb67ec08b5af1326c671c04849a685256526e49363b4
+MD5 e198d2812630447e447cad27fed0a9a5 netbeans-6.0_alpha8.ebuild 27370
+RMD160 2d6b11cd8c1faa2dda1052e1ff6370a8d759d9e3 netbeans-6.0_alpha8.ebuild 27370
+SHA256 14675bf73ec85888b921cb67ec08b5af1326c671c04849a685256526e49363b4 netbeans-6.0_alpha8.ebuild 27370
+MISC ChangeLog 8572 RMD160 5f8fb958bc694c55990cdafc970521138ee59429 SHA1 087ececd54b8ed8a35af50538a42d8f0ba43724e SHA256 fbd0b3557f9419176a679913cd59af13d1d333b2ec57f9c67e7a1b103ec94c7a
+MD5 53b2970af27e013d3c67e70a36ebe124 ChangeLog 8572
+RMD160 5f8fb958bc694c55990cdafc970521138ee59429 ChangeLog 8572
+SHA256 fbd0b3557f9419176a679913cd59af13d1d333b2ec57f9c67e7a1b103ec94c7a ChangeLog 8572
 MISC metadata.xml 1128 RMD160 9ba1b3fec0fedacd10416e7c61edfecada1912cd SHA1 997b3db42167a9e591c3667ffddd125bbb85fa98 SHA256 8c524b060fdbfc4aa432a528c2e78ad05eb20fcf4bc8973c1c8366699bb90b5a
 MD5 e7fcbf7f5131562425fda47afe3b39b9 metadata.xml 1128
 RMD160 9ba1b3fec0fedacd10416e7c61edfecada1912cd metadata.xml 1128
